repology-updater/src/parsing/parsers/snapshots/repology_updater__parsing__parsers__stalix__tests__error_bad_lang_module.snap
---
source: repology-updater/src/parsing/parsers/stalix.rs
expression: res.unwrap_err()
---
Error {
    context: "on line 1",
    source: "unexpected lang_module ruby",
}
